fix input type=date width issue on iOS

--- a/src/components/unstyled/input.css
+++ b/src/components/unstyled/input.css
@@ -1,4 +1,4 @@
 .input {
-  @apply shrink;
+  @apply shrink appearance-none;
   @apply h-12 px-4 text-sm leading-loose;
 }
